# FARI-Welcome_Template

./: README.md  main.py  pyproject.toml  requirements.txt
